--- a/index.html
+++ b/index.html
@@ -15,12 +15,39 @@
 
 <body>
 <div class="container">
-<div class = "header">
-</div>
+
+
+<ul class="nav nav-tabs">
+	<li class="active"><a href="#">Home</a></li>
+	<li><a href="Contact.html">Contact</a></li>
+</ul>
 
 <div class = "content">
-<div class = "well">
-Test
+
+<div class="progress progress-striped active">
+	<div class="progress-bar"  role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%"></div>
+</div>
+
+
+<div class = "row">
+	<div class = "col-md-4 col-md-offset-1 well">
+		<ul>
+			<li>Bitcoin</li>
+			<li>Litecoin</li>
+			<li>Heavycoin</li>
+			<li>Dogecoin</li>
+		</ul>
+	</div>
+	<div class = "col-md-4 col-md-offset-2 well">
+		<ul>
+			<li>14szvhThCpwVLTK9V44PNt4kGe6tREt84T</li>
+			<li>Litecoin</li>
+			<li>Heavycoin</li>
+			<li>Dogecoin</li>
+		</ul>
+	</div>
+</div>
+
 </div>
 </div>
 
